# CMPE-275-mini-1

./: CMakeLists.txt  script.sh
include/: CSVDataReader.h  CrashDataArrays.h  CrashDataFacade.h  CrashRecord.h  IDataReader.h
src/: CSVDataReader.cpp  CrashDataFacade.cpp  CrashRecord.cpp  main.cpp
